[package]
name = "cs453-pap-server"
description = "CS453 Program Analysis Platform Server"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
# http
tiny_http = "*"
# threading
crossbeam-channel = "*"
# filesystem
zip = "*"
tempdir = "*"
# logging
log = "*"
stderrlog = "*"
# utilities
anyhow = "*"
once_cell = "*"
# template
tinytemplate = "*"
# worker
cs453-pap-worker = { path = "../worker" }