[package]
name = "cs453-pap-server"
description = "CS453 Program Analysis Platform Server"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
# http
tiny_http = "0.12.0"
# threading
crossbeam-channel = "0.5.12"
# filesystem
zip = "0.6.6"
tempdir = "0.3.7"
# logging
log = "0.4.21"
stderrlog = "0.6.0"
# utilities
anyhow = "1.0.80"
once_cell = "1.19.0"
# template
tinytemplate = "1.2.1"
# worker
cs453-pap-worker = { path = "../worker" }