[package]
name = "cs453-pap-server"
description = "CS453 Program Analysis Platform Server"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
# http
tiny_http = "0.12.0"
# threading
crossbeam-channel = "0.5.13"
# filesystem
zip = "2.2.0"
tempdir = "0.3.7"
# logging
log = "0.4.22"
stderrlog = "0.6.0"
# utilities
anyhow = "1.0.91"
once_cell = "1.20.2"
# template
tinytemplate = "1.2.1"
# worker
cs453-pap-worker = { path = "../worker" }