[package]
name = "cs453-pap-worker"
description = "CS453 Program Analysis Platform Worker"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
# logging
log = "0.4.22"
stderrlog = "0.6.0"
# utilities
anyhow = "1.0.91"
once_cell = "1.20.2"
# async
futures-util = "0.3.31"
tokio = "1.41.0"
# filesystem
memfile = "0.3.2"
tar = "0.4.42"
# docker
bollard = "0.17.1"
# hashing
hex = "0.4.3"
sha3 = "0.11.0-pre.4"
# serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"